guestbook/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guestbook
  labels:
    app.kubernetes.io/name: guestbook
