guestbook/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
 name: guestbook
 namespace: guestbook

spec:
  gateways:
    - "istio-system/public"
  hosts:
   - guestbook.bigbang.dev
  http:
  - route:
    - destination:
        port:
          number: 80
        host: guestbook-ui.svc.cluster.local
